# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# https://github.com/wimglenn/resources-example/blob/master/setup.cfg

[metadata]
name = ddsp_pytorch
version = 0.0.1
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3


[options]
packages = find:
include_package_data = true
install_requires =
    setuptools
    importlib_resources


[tool:pytest]
addopts = --cov=typed_argparse --cov-report term-missing --cov-report html:.cov_html --cov-report=xml


[flake8]
max-line-length = 100
